# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netdeavour"
version = "1.3.2"
description = "Dashboard for merging, visualising and filtering network scans with multi-user support"
readme = "README.md"
authors = [{ name = "SweetFrost25", email = "sweetfrost25@github.com" }]
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["nmap", "nessus", "dashboard", "network", "scanning"]
dependencies = [
    'dash >= 2.18.1',
    'dash[diskcache]',
    'dash-bootstrap-components >= 1.6.0',
    'dash_ag_grid >= 31.2.0',
    'dash_cytoscape >= 1.0.2',
    'werkzeug >= 3.0.0',
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ['bumpver']

[project.urls]
Homepage = "https://github.com/SweetFrost25/NetDeavour"

[project.scripts]
netdeavour = "netdeavour.__main__:main"

[tool.bumpver]
current_version = "1.3.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"src/netdeavour/__main__.py" = [
    '__version__ = "{version}"',
]

